# ai_trainers

./: .env.example  .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
output/try no 1/: enhanced.md  final.md  internet.md  report.md  ui.md
src/ai_teachers/: crew.py  main.py
src/ai_teachers/config/: agents.yaml  tasks.yaml
